Only need to find first 20 refs

--- a/HW6-9.md
+++ b/HW6-9.md
@@ -22,7 +22,7 @@ Write a summary of the given paper.  Similar to HW3, your summary, written in yo
 
 In addition to the summary, there are two other components:
 * You must list at least 3 questions or comments that you have about the paper. 
-* You must find all of the references in the paper online. For each reference, provide the URL where the reference can be accessed.  Use the reference tag (e.g., [2]) to indicate the reference and put them in the same order as in the original reference list. If you are unable to find an online version of a particular reference, describe how you tried to find it. ***This should go in a separate Markdown file named HWx-refs.md, where x is the assignment number.*** Make sure that the URLs are displayed in the Markdown (i.e., don't create anchor text that hides the URLs).
+* You must find all of the references in the paper online. **(UPDATE: Do this for only the first 20 references.)** For each reference, provide the URL where the reference can be accessed.  Use the reference tag (e.g., [2]) to indicate the reference and put them in the same order as in the original reference list. If you are unable to find an online version of a particular reference, describe how you tried to find it. ***This should go in a separate Markdown file named HWx-refs.md, where x is the assignment number.*** Make sure that the URLs are displayed in the Markdown (i.e., don't create anchor text that hides the URLs).
 
 Use the [template from HW3](https://www.overleaf.com/read/btrdddtcqfyb) with the following changes:
 * add the BibTeX entry for the paper you are summarizing to your BibTeX file
