Updates to schedule due to COVID-19

--- a/HW6-9.md
+++ b/HW6-9.md
@@ -5,9 +5,8 @@
 This covers 4 separate assignments to write summaries of ODU-CS research.  
 
 * HW 6 - due Thursday, March 5, 2020 - [Dr. Wu](https://www.cs.odu.edu/~jwu/)'s or [Dr. Nelson](https://www.cs.odu.edu/~mln/)'s paper
-* HW 7 - due Thursday, March 19, 2020 - [Dr. Chernikov](https://www.cs.odu.edu/~achernik/)'s paper
-* HW 8 - due Thursday, March 25, 2020 - [Dr. Jain](https://www.cs.odu.edu/~jain/)'s paper
-* HW 9 - due Thursday, April 2, 2020 - [Dr. Olariu](https://www.cs.odu.edu/~olariu/)'s paper
+* HW 7 - due Thursday, March 24, 2020 - [Dr. Chernikov](https://www.cs.odu.edu/~achernik/)'s paper
+* HW 8 - due Thursday, April 2, 2020 - [Dr. Jain](https://www.cs.odu.edu/~jain/)'s or [Dr. Olariu](https://www.cs.odu.edu/~olariu/)'s paper
 
 ## Assignment
 
