--- a/HW6-9.md
+++ b/HW6-9.md
@@ -2,7 +2,7 @@
 
 # ODU Research Summaries
 
-This covers 4 separate assignments to write summaries of ODU-CS research.  
+This covers 3 separate assignments to write summaries of ODU-CS research.  
 
 * HW 6 - due Thursday, March 5, 2020 - [Dr. Wu](https://www.cs.odu.edu/~jwu/)'s or [Dr. Nelson](https://www.cs.odu.edu/~mln/)'s paper
 * HW 7 - due Thursday, March 24, 2020 - [Dr. Chernikov](https://www.cs.odu.edu/~achernik/)'s paper
@@ -34,7 +34,7 @@ Use the [template from HW3](https://www.overleaf.com/read/btrdddtcqfyb) with the
 
 Make sure that you have committed and pushed your local repo to the repository on GitHub.  All of your summaries for these assignments should go in the same repo. 
 
-Name your files according to the assignment (`HW6`, `HW7`, `HW8`, `HW9`).  For instance, for Dr. Chernikov's paper, the filenames should be `HW7-summary.tex`, `HW7-summary.pdf`, and `HW7-refs.md`.  You may use a single BibTeX file for all of the assignments.
+Name your files according to the assignment (`HW6`, `HW7`, `HW8`).  For instance, for Dr. Chernikov's paper, the filenames should be `HW7-summary.tex`, `HW7-summary.pdf`, and `HW7-refs.md`.  You may use a single BibTeX file for all of the assignments.
 
 We will *not* use Blackboard for the submission of these assignments.  When you are ready to submit, make your final commit and use the commit message: `Ready to grade @weiglemc`. This will generate an email to me.
 
